# moduleur

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  ROADMAP.md  SAFETY.md
.github/workflows/: deploy-builder.yml
08-default-patch/: default-patch.kicad_prl
accessories/: README.md
accessories/multiples-attenuator/: README.md  attenuator-multiple.kicad_pcb  attenuator-multiple.kicad_prl  fp-lib-table
diy-tools/builder/: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json
diy-tools/moduleur-map/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
enclosure/: README.md  enclosure-bom.csv  shmoergh-moduleur-panel-assembly-top.eps
enclosure/3d-printed/: corner-fixture-left.step  corner-fixture-left.stl  corner-fixture-right.step  corner-fixture-right.stl  side-fixture.step  side-fixture.stl  top-bottom-panel-block.stl
enclosure/bosch/: bosch-10X40.stp
enclosure/fr4-enclosure/: README.md
enclosure/panels/: shmoergh-moduleur-panel-assembly-bottom.step  shmoergh-moduleur-panel-assembly-side-USB.step  shmoergh-moduleur-panel-assembly-side.step  shmoergh-moduleur-panel-assembly-top.step
enclosure/print/: shmoergh-moduleur-panel-assembly-top-with-holes.eps
eurorack/faceplates/: README.md  eurorack-panel-shmoergh-moduleur-brain.dxf  eurorack-panel-shmoergh-moduleur-crush-lfo-output.step  (+4 more)
modules/: README.md
modules/07-brain/brain-sdk/programs/midi2cv/: CMakeLists.txt  README.md  midi2cv-v0.1.uf2
modules/07-brain/brain-sdk/programs/midi2cv/src/: note-stack.h
next/: README.md
next/07-brain/brain-sdk/: CMakeLists.txt  pico_sdk_import.cmake
next/07-brain/brain-sdk/.github/instructions/: general-coding-guidelines.instructions.md
next/07-brain/brain-sdk/docs/: BUTTON.md  LED.md  MIDI_PARSER.md  POT_MULTIPLEXER.md  SETUP.md
next/07-brain/brain-sdk/lib/: CMakeLists.txt
next/07-brain/brain-sdk/lib/brain-common/: CMakeLists.txt  README.md  brain-common.h  brain-gpio-setup.h
next/07-brain/brain-sdk/lib/brain-io/: CMakeLists.txt  audio-cv-in.cpp  audio-cv-out.cpp  pulse.cpp
next/07-brain/brain-sdk/lib/brain-io/include/brain-io/: audio-cv-out.h  midi-parser.h  pulse.h
next/07-brain/brain-sdk/lib/brain-ui/: CMakeLists.txt  brain-ui.h  led.cpp  pot-multiplexer.cpp
next/07-brain/brain-sdk/lib/brain-ui/include/brain-ui/: button.h  led.h  pot-multiplexer.h
next/07-brain/brain-sdk/programs/: .gitkeep  CMakeLists.txt
next/07-brain/brain-sdk/programs/hardware-test/: CMakeLists.txt  audio_cv_out_test.cpp  settings.h
next/07-brain/brain-sdk/programs/midi2cv/src/: config.h  main.cpp
next/07-brain/brain-sdk/scripts/: .gitkeep
(+637 files in other folders)
